@@ -22,6 +22,11 @@ TODO
   libs so it doesnt have to be done in the main app.
   
 """
+import sys
+#sys.path.append("/usr/local/fluxStyle/mods")
+sys.path.append("./mods")
+import os,findStyles,parseConfig,errorMessage
+from os.path import isfile,expanduser,isdir
 try:
     import gtk
 
@@ -51,49 +56,26 @@ try:
     import gtk.glade
 
 except:
-    import sys
     #we have gtk so give a gui message as to why this app will not work.
     #maybe we need to offer to open the browser to
     #http://ftp.gnome.org/pub/GNOME/sources/libglade/2.0/ 
     ver = sys.version[:5]
-    message = """
-You need to install libglade2\n\
-http://ftp.gnome.org/pub/GNOME/sources/libglade/2.0/\n\
-or set your PYTHONPATH correctly.\n\
-try: export PYTHONPATH=/usr/local/lib/python%s/site-packages/\n\
+    message = """You need to install libglade2 
+http://ftp.gnome.org/pub/GNOME/sources/libglade/2.0/ 
+or set your PYTHONPATH correctly.
+try: export PYTHONPATH=/usr/local/lib/python%s/site-packages/
 or export PYTHONPATH=/usr/lib/python%s/site-packages/""" % (ver,ver)
-    m = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, \
-          gtk.BUTTONS_NONE, message)
-    m.add_button(gtk.STOCK_OK, gtk.RESPONSE_CLOSE)
-    response = m.run()
-    m.hide()
-    if response == gtk.RESPONSE_CLOSE:
-        m.destroy()
-    
+    errorMessage.infoMessage(message)
     raise SystemExit
 
 if gtk.pygtk_version < (2,3,90):
     #we do have gtk so lets tell them via gui that they need to update pygtk
     #maybe we should add a 'would you like to open a browser to pygtk.org ??
-    message = """PyGtk 2.3.90 or later required for this program\n\
-it is reccomended that you get pygtk 2.6 or newer\nfor best results."""
-
-    m = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, \
-          gtk.BUTTONS_NONE, message)
-    m.add_button(gtk.STOCK_OK, gtk.RESPONSE_CLOSE)
-    response = m.run()
-    m.hide()
-    if response == gtk.RESPONSE_CLOSE:
-        m.destroy()
+    message ="""PyGtk 2.3.90 or later required for this program 
+it is reccomended that you get pygtk 2.6 or newer for best results."""
+    errorMessage.infoMessage(message)
     raise SystemExit
   
-import sys
-#sys.path.append("/usr/local/fluxStyle/mods")
-sys.path.append("./mods")
-import os,findStyles,parseConfig
-from os.path import isfile,expanduser,isdir
-#now we have both gtk and gtk.glade imported
-#Also, we know we are running GTK v2
 class StyleChange:
     """Class wrapper for changing styles in fluxbox"""
     location = ""
@@ -147,19 +129,19 @@ class StyleChange:
         """Fill the combo list with styles test to see if there is a ~/.fluxbox/styles
         if there isnt then make it and move on instead of die."""
         global location
-        location = loc
+        location = expanduser(loc)
         if location == "default":
-            location = "~/.fluxbox/styles"
+            location = expanduser("~/.fluxbox/styles")
             try:
-                dir = os.listdir(expanduser("~/.fluxbox/styles"))
+                dir = os.listdir(location)
                 dir.sort()
                 self.liststore.clear()
                 for styles in dir:
-                    if isdir(expanduser(location+"/"+styles)):
+                    if isdir(location+"/"+styles):
                         self.liststore.append((self.__get_preview__(styles), styles,))
             except(OSError):
                 dir = expanduser("~/.fluxbox/styles")
-                os.mkdir(dir)
+                os.makedirs(dir,mode=0700)
                 message = """You do not have a default\nstyle folder yet \
         I have\nmade it for you. The list will\nremain empty until you \ninstall a \
         style which you can\ndo by clicking the add button."""
@@ -171,20 +153,21 @@ class StyleChange:
                 if response == gtk.RESPONSE_CLOSE:
                     m.destroy()
         else:
-            dir = os.listdir(expanduser(location))
+            dir = os.listdir(location)
             dir.sort()
             self.liststore.clear()
             for styles in dir:
-                if isdir(expanduser(location+"/"+styles)):
+                if isdir(location+"/"+styles):
                     self.liststore.append((self.__get_preview__(styles), styles,))
     # get the preview image for view
     def __get_preview__(self, stylename):
         """Get the preview image from  ~/.fluxbox/styles/styleName/preview.jpg"""
         global location
-        if os.path.isdir(expanduser(location) + "/" + stylename):
-            if isfile(expanduser(location+"/"+stylename+"/preview.jpg")):
+        location = expanduser(location)
+        if os.path.isdir(location + "/" + stylename):
+            if isfile(location+"/"+stylename+"/preview.jpg"):
                 image = gtk.Image()
-                image.set_from_file(expanduser(location+"/" +stylename+"/preview.jpg"))
+                image.set_from_file(location+"/" +stylename+"/preview.jpg")
                 return image.get_pixbuf()
             else:
                 image = gtk.Image()
@@ -192,23 +175,32 @@ class StyleChange:
                 image.set_from_file( "./images/none.jpg")
                 return image.get_pixbuf()
     def __fill_view_menu__(self, widget):
-        try:
-            ops = parseConfig.parse_file(expanduser("~/.fluxbox/fluxStyle.rc"))
-            count = 1
-            view = self.view_menu
-            for k,v in ops.iteritems():
-                if k == "STYLES_DIRS":
-                    for x in v:
-                        name = "_"+str(count)+" Extra Styles"
-                        menuitem = gtk.MenuItem(name + str(count))
-                        menuitem.connect("activate", self.__fill_combolist__,x)
-                        view.add(menuitem)
-                        count += 1
-            view.show_all()
-        except (UnboundLocalError):
-            pass
-            #TODO test more to see if this is the error we get everytime there is no config file, if so we need to create one then 
-            #pop up a dialog telling the user what the fuck to do. 
+        #TODO check to see if ops == False if so then the config hasnt been edited yet
+        #so all we have is our default style location.
+        if parseConfig.check4_config() == 2:
+            message = """This looks like the first time you have started fluxStlye
+a default config has been created for you. You should edit this config to control the
+location of styles shown in the preview window. The config file is located in ~/.fluxStyle.rc"""
+            errorMessage.infoMessage(message)
+        
+        elif parseConfig.check4_config() == 3:
+            message = """You do not have the config file "~/.fluxStyle.rc" and you do not have write access
+to the "~/" aka $HOME directory. If you find this is not accurate information please report a bug to errr@errr-online.com"""
+            errorMessage.infoMessage(message)
+        elif parseConfig.check4_config() == True:
+            ops = parseConfig.parse_file(expanduser("~/.fluxStyle.rc"))
+            if ops != False:
+                count = 1
+                view = self.view_menu
+                for k,v in ops.iteritems():
+                    if k == "STYLES_DIRS":
+                        for x in v:
+                            name = "_"+str(count)+" Extra Styles"
+                            menuitem = gtk.MenuItem(name + str(count))
+                            menuitem.connect("activate", self.__fill_combolist__,x)
+                            view.add(menuitem)
+                            count += 1
+                    view.show_all()            
     # Set style 
     def __apply_style_clicked__(self,widget):
         """Used to apply new styles"""
@@ -248,40 +240,31 @@ class StyleChange:
     def __remove_style_clicked__(self,widget):
         """Remove selected style, currently only 1 style at a time is supported"""
         global location
-        try:
-          style = self.__get_selected_style__()
-          message = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, \
-              gtk.BUTTONS_NONE, "Are you sure you want to delete "+style\
-              +"?")
-          message.add_button(gtk.STOCK_OK, gtk.RESPONSE_OK)
-          message.add_button(gtk.STOCK_CANCEL, gtk.RESPONSE_CLOSE)
-          response = message.run()
-          message.hide()
-          #TODO
-          #Need to add a try statement here to make sure we will be able to delete the 
-          #selected style
-          if response == gtk.RESPONSE_OK:
-              if findStyles.remove_style(style,location) != False:
-                  message.destroy()
-                  self.__fill_combolist__(self,location)
-              else:
-                  say = """You do not have access to remove this style please contact your system admin for help removing this style."""
-                  message = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, gtk.BUTTONS_NONE, say)
-                  message.add_button(gtk.STOCK_CLOSE, gtk.RESPONSE_CLOSE)
-                  response = message.run()
-                  message.hide()
-                  if response == gtk.RESPONSE_CLOSE:
-                      message.destroy()
-          if response == gtk.RESPONSE_CLOSE:
-              message.destroy()
-        except(OSError):
-          m = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, \
-                gtk.BUTTONS_NONE, "You must select a style to remove first")
-          m.add_button(gtk.STOCK_OK, gtk.RESPONSE_CLOSE)
-          response = m.run()
-          m.hide()
-          if response == gtk.RESPONSE_CLOSE:
-              m.destroy()
+        style = self.__get_selected_style__()
+        if style == False:
+            m = """You must select a style to remove first"""
+            errorMessage.infoMessage(m)            
+        else:
+            message = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, \
+                gtk.BUTTONS_NONE, "Are you sure you want to delete %s?"%(style))
+            message.add_button(gtk.STOCK_OK, gtk.RESPONSE_OK)
+            message.add_button(gtk.STOCK_CANCEL, gtk.RESPONSE_CLOSE)
+            response = message.run()
+            message.hide()
+            if response == gtk.RESPONSE_OK:
+                if findStyles.remove_style(style,location) != False:
+                    message.destroy()
+                    self.__fill_combolist__(self,location)
+                else:
+                    say = """You do not have access to remove this style please contact your system admin for help removing this style."""
+                    message = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, gtk.BUTTONS_NONE, say)
+                    message.add_button(gtk.STOCK_CLOSE, gtk.RESPONSE_CLOSE)
+                    response = message.run()
+                    message.hide()
+                if response == gtk.RESPONSE_CLOSE:
+                    message.destroy()
+            if response == gtk.RESPONSE_CLOSE:
+                message.destroy()
     def __get_selected_style__(self):
         """Getting the selected style"""
         selection = self.treeview1.get_selection()
@@ -296,15 +279,9 @@ class StyleChange:
         #gladefile="/usr/local/fluxStyle/images/main.glade"
         gladefile="./images/main.glade"
         if gtk.pygtk_version < (2,5,90):
-            message = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, \
-                gtk.BUTTONS_NONE, \
-                "fluxStyle version 1.0\nUpdae your pygtk version\nfor more features."+\
-                " Version\n2.6.0 or newer is reccomended")
-            message.add_button(gtk.STOCK_OK, gtk.RESPONSE_OK)
-            response = message.run()
-            message.hide()
-            if response == gtk.RESPONSE_OK:
-                message.destroy()            
+            message = """fluxStyle version 1.0 Updae your pygtk version for more features. Version
+2.6.0 or newer is reccomended"""
+            errorMessage.infoMessage(message)
         else:
             windowname2="aboutdialog1"
             self.wTree2=gtk.glade.XML (gladefile,windowname2)
