@@ -5,6 +5,35 @@ Email: Michael Rice errr@errr-online.com
 Website: http://errr-online.com/
 '''
 import os,re
+from os.path import expanduser
+
+def check4_config():
+    folder = expanduser("~/")
+    file = folder+".fluxStyle.rc"
+    w_ok = os.access(folder, os.W_OK)
+    f_ok = os.path.isfile(file)
+    if f_ok:
+        return True
+    elif not f_ok and w_ok:
+        write_config()
+        return 2
+    #file isnt there and we dont have premission to make it.    
+    elif not w_ok and not f_ok:
+        return 3
+
+def write_config():
+    conFile = """# No need to add ~/.fluxbox/styles it is the default location and if it is listed it will
+# be ignored. Currently the only option supported in revision 41 is STYLES_DIRS
+#STYLES_DIRS:/usr/local/share/fluxbox/styles:/usr/share/commonbox/styles
+# Default is ~/.fluxbox/styles only uncomment if you want to install somewhere else.
+# keep in mind if it is not your ~/ then you may need root rights to install
+# Not supported yet
+#INSTALL_DIR:"""
+    file = expanduser("~/.fluxStyle.rc")
+    file = open(file, "w")
+    file.write(conFile)
+    file.close()
+#    return 2
 
 def parse_file(file):
     """read config file place results into a 
@@ -18,6 +47,7 @@ def parse_file(file):
     #OPTION:commet
     OPTION:notComment #this is not valid comment
     """
+    file = expanduser(file)
     opts = {}
     if os.path.isfile(file):
         match = re.compile(r"^[^#^\n]")
@@ -28,8 +58,12 @@ def parse_file(file):
         for lines in info:
             if match.findall(lines):
                 keys.append( lines.strip().split(":") )
-    for i in range(len(keys)):
-        opts[keys[i][0]] = keys[i][1:]
-    return opts
-#if __name__ == "__main__":
-#    parse_file("/home/errr/fluxmenu/testConfig")
+        if len(keys) == 0:
+            return False
+        for i in range(len(keys)):
+            opts[keys[i][0]] = keys[i][1:]
+        return opts
+    else:
+        return False    
+if __name__ == "__main__":
+    print parse_file("~/programs/fluxStyle/fluxStyle")
